--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Helamed</title>
+    <title>Helamed - Hospital Management System</title>
+    <style>
+      /* Reset default margins and padding */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      
+      /* Ensure html and body take full height and width */
+      html, body {
+        height: 100%;
+        width: 100%;
+      }
+      
+      /* Make the root div fill the entire viewport */
+      #root {
+        min-height: 100vh;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
